# SatDump-Lband

./: README.md  satdump_cfg.json
plugins/: CMakeLists.txt
src-core/: CMakeLists.txt
src-core/common/tracking/rotator/: rotator_handler.cpp  rotcl_handler.cpp  rotctl_serial_handler.cpp  rotctl_serial_handler.h
src-interface/recorder/tracking/: tracking_widget.cpp
